[gd_scene load_steps=2 format=3 uid="uid://victory_screen_scene"]

[ext_resource type="Script" path="res://scripts/ui/VictoryScreen.gd" id="1_victory_script"]

[node name="VictoryScreen" type="CanvasLayer"]
layer = 25
script = ExtResource("1_victory_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.15, 0.3, 0.85)

[node name="VictoryPanel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -160.0
offset_right = 200.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VictoryPanel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="VictoryPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(0.3, 1, 0.5, 1)
text = "LEVEL SELESAI!"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="VictoryPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
text = "Level berhasil diselesaikan"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="VictoryPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="CoresLabel" type="Label" parent="VictoryPanel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
text = "Cores: 1/5"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VictoryPanel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="NextButton" type="Button" parent="VictoryPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "LEVEL BERIKUTNYA"

[node name="MainMenuButton" type="Button" parent="VictoryPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "MENU UTAMA"
